# cppzmq-ipc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: SubCppzmq.cmake  SubCxxopts.cmake  SubLibzmq.cmake
pyzmq_ipc/: __init__.py  setup.py
pyzmq_ipc/unit_test/: ctrl_cv.py  unit_test.py
pyzmq_ipc/zmq_ipc/: __init__.py  zmq_ipc.py
unit_test/: CMakeLists.txt  c_lib_test.c  client.cpp  server.cpp  unit_test.cpp  unit_test.py
zmq_ipc/: CMakeLists.txt
zmq_ipc/include/: czmq_ipc.h  zmq_ipc.h
zmq_ipc/src/: czmq_ipc.cpp  make_unique.h  zmq_ipc.cpp
zmq_proxy/: CMakeLists.txt
zmq_proxy/src/: main.cpp
